--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bot for circlejerkin on the JOKG discord server",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node index.js",
+    "start": "node index.js"
   },
   "author": "Sniggleboots",
   "license": "ISC",
