Initial additions of Postgres

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Sniggleboots",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.6.1"
+    "discord.js": "^11.6.1",
+    "pg": "^7.18.2"
   },
   "repository": {
     "type": "git",
